REST DOCS 생성 및 테스트 케이스 추가